--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+
+
+ 
+         <!-- NAVIGATION BAR  -->
+
+
+
     <nav class="navbar">
         <div class="logo">MADDUR RAVI</div>
          <ul class="menu-bar">
@@ -16,10 +23,17 @@
             <li><a href="#">PROJECTS</a></li>
             <li><a href="#">CONTACT</a></li>
          </ul>  
-    </nav> 
+        </nav>
+
+
+
+                <!-- SECTION 1-->
+
+
+
     <section class="sec1">
         <div class="sec-1-1">
-            <img src="sung.jpg" alt="ravi img">
+            <img src="assets/sung.jpg" alt="ravi img">
         </div>
         <div class="sec-1-2">
             <span class="sec1-2-1">Hello I'm</span>
@@ -33,9 +47,63 @@
                 I am constantly learning and experimenting with new web technologies, 
                 striving to stay up-to-date with the latest trends in frontend development. 
             </p>
-            <div></div>
+            <div class="buttons">
+                <button>Download CV</button><button>Contact Info</button>
+            </div>
+            <div class="social">
+                <img src="assets/linkedin.png" alt="linkdin">
+                <img src="assets/github.png" alt="github">
+
+            </div>
         </div>
-    </section>    
+
+
+
+                        <!--SECTION   2-->
+
+
+
+    </section> 
+    <section class="sec2">
+        <div class="sec-2-1">
+            <span>Get to know more</span>
+            <h1>About me</h1>
+        </div>
+        <div class="sec-2-2">
+            <div class="sec-2-2-1">
+                <img src="assets/sung.jpg">
+            </div>
+            <div class="sec-2-2-2">
+                <div class="sec-2-2-2-1">
+                    <div class="box">
+                        <img src="assets/experience.png">
+                        <span>Experience</span>
+                        <span>2+ Years</span>
+                        <span>Fropntend Developer</span>
+                    </div>
+                    <div class="box">
+                        <img src="assets/education.png">
+                        <span>Education</span>
+                        <span>BSC Bachelors Degree</span>
+                        <span>MSCs(Maths,statistics,Cs)</span>
+                    </div>
+                </div>
+                <p class="p1">
+                    Hello, my name is Ravi. I recently graduated with a Bachelor of Science degree in Mathematics, 
+                    Statistics, and Computer Science (BSc MSCS). During my studies, I developed a strong foundation 
+                    in analytical thinking, data interpretation, and programming. I have hands-on experience with languages 
+                    like Python, Java, and SQL, and I've worked on academic projects involving data analysis and 
+                    software development.
+
+                   I'm passionate about using technology to solve real-world problems and continuously improving my skills. 
+                   I'm now looking for opportunities where I can apply my knowledge, contribute to innovative projects, 
+                   and grow as a professional in the tech industry.
+
+                </p>
+            </div>
+        </div>
+
+    </section>   
 
 </body>
 </html>
