--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -103,7 +103,36 @@
             </div>
         </div>
 
-    </section>   
+    </section>  
+        <footer class="footer">
+        <div class="footer-container">
+            <div class="foot-info">
+                <div class="author">
+                <h3 class="author-1">MADDUR RAVI</h3>
+                <p class="author-2">
+                    I'm passionate about using technology to solve real-world problems and
+                    continuously improving my skills. I'm now looking for opportunities
+                    where I can impove my .
+                </p>
+                </div>
+                <div class="social-footer">
+                    <h3 class="social-heading">SOCIAL</h3>
+                    <img src="assets/linkedin.png" class="social-imgs">
+                    <img src="assets/github.png" class="social-imgs">
+                    <img src="assets/email.png" class="social-imgs">
+                </div>           
+            </div>
+                <div class="copyright">
+                     <P>
+                        Copyright 2025. Made By 
+                        <span CLASS="underline">MADDUR RAVI</span>
+                     </P>
+                </div>
+        </div>
+    </footer>
+
+    </body>
+    </html>
 
 </body>
 </html>
