--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -109,6 +109,8 @@
 
         <!--SECTION 3-->
 
+
+
     <section class="sec-3">
         <div class="sec-3-1">
             <span>Browse My Recent</span>
@@ -149,9 +151,44 @@
      </div>
 
     </section>
+
+
+
+    <!-- SECTION 4 -->
+
+
+
+    <section class="sec4">
+        <div  class="sec4-1">
+            <span>See My </span>
+            <h1>Tchnnical Skills</h1>
+        </div>
+        <div class="sec4-2">
+            <div class="box4">
+                <img src="assets/html.png">
+            </div>
+            <div class="box4">
+                <img src="assets/css.png">
+            </div>
+            <div class="box4">
+                <img src="assets/js.png">
+            </div>
+        </div>
+        </div>
+
+    </section>
     
     
+
+
+
+
        <!--FOOTER SECTION-->
+
+
+
+
+
     <footer class="footer">
         <div class="footer-container">
             <div class="foot-info">
