--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Document</title>
     
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -24,7 +24,24 @@
             <li><a href="#">PROJECTS</a></li>
             <li><a href="#">CONTACT</a></li>
          </ul>  
-        </nav>
+    </nav>
+
+    <nav class="navbar-menu">
+        <div class="logo">
+            MADDUR RAVI
+        </div>
+        <div class="hamburger">
+            <i class="fa-solid fa-bars" style="color: #000000;"></i>
+        </div>
+         <ul class="menu-bar">
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">PROJECTS</a></li>
+            <li><a href="#">CONTACT</a></li>
+         </ul>  
+    </nav>
+
+
 
 
 
