--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,31 +19,32 @@
     <nav class="navbar">
         <div class="logo">MADDUR RAVI</div>
          <ul class="menu-bar">
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">PROJECTS</a></li>
+            <li><a href="#home">HOME</a></li>
+            <li><a href="#about">ABOUT</a></li>
+            <li><a href="#project">PROJECTS</a></li>
             <li><a href="#">CONTACT</a></li>
          </ul>  
     </nav>
 
+    <div class="N">
     <nav class="navbar-menu">
         <div class="logo">MADDUR RAVI</div>
         <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
          <ul class="menu-bar">
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">PROJECTS</a></li>
+            <li><a href="#home">HOME</a></li>
+            <li><a href="#about">ABOUT</a></li>
+            <li><a href="#project">PROJECTS</a></li>
             <li><a href="#">CONTACT</a></li>
          </ul>  
     </nav>
-
+    </div>
 
 
                 <!-- SECTION 1-->
 
 
 
-    <section class="sec1">
+    <section class="sec1" id="home">
         <div class="sec-1-1">
             <img src="assets/sung.jpg" alt="ravi img">
         </div>
@@ -68,15 +69,15 @@
 
             </div>
         </div>
-
+    </section> 
 
 
                         <!--SECTION   2-->
 
 
 
-    </section> 
-    <section class="sec2">
+
+    <section class="sec2" id="about">
         <div class="sec-2-1">
             <span>Get to know more</span>
             <h1>About me</h1>
@@ -122,7 +123,7 @@
 
 
 
-    <section class="sec-3">
+    <section class="sec-3" id="project">
         <div class="sec-3-1">
             <span>Browse My Recent</span>
             <h1>Projects</h1>
@@ -229,12 +230,12 @@
 
 
     <script>
-        const hamburger=document.querySelector(".hamburger");
-        const menu_bar=document.querySelector(".navbar-menu .menu-bar");
+        const hamburger = document.querySelector(".hamburger");
+        const menu_bar = document.querySelector(".navbar-menu .menu-bar");
 
-        hamburger.addEventListene("click", ()=>(
+        hamburger.addEventListene("click", ()=>{
             menu_bar.classList.toggle("show")
-        ));
+        });
 
 
     </script>
